[gd_scene load_steps=6 format=3 uid="uid://bu3meniqfev86"]

[ext_resource type="Script" path="res://Scripts/levels_menu.gd" id="1_dnr3g"]
[ext_resource type="Texture2D" uid="uid://c6kqq7kl28vav" path="res://Assets/Clouds 1.png" id="2_3vkaa"]
[ext_resource type="FontFile" uid="uid://bqp0rnuw3mtk6" path="res://Assets/PixelOperator8.ttf" id="3_b305b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sleo2"]
texture = ExtResource("2_3vkaa")
0:0/size_in_atlas = Vector2i(36, 20)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xu3g1"]
sources/0 = SubResource("TileSetAtlasSource_sleo2")

[node name="levels_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnr3g")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-296, -168)
tile_set = SubResource("TileSet_xu3g1")
format = 2
layer_0/tile_data = PackedInt32Array(1310756, 0, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -254.0
offset_right = -344.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2

[node name="level_1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b305b")
text = "Level 1"

[node name="level_2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b305b")
text = "Level 2"

[node name="level_3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b305b")
text = "Level 3"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(192, 108)
zoom = Vector2(3, 3)

[connection signal="pressed" from="VBoxContainer/level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/level_3" to="." method="_on_level_3_pressed"]
